creusot/tests/should_fail/prusti/deref/send_back.stderr
error[creusot]: `&'a u32` cannot be moved from `'post` to `'pre` since it didn't exist at that point
  --> send_back.rs:10:21
   |
10 | #[ensures(old(deref(result)) == old(deref(x)))]
   |                     ^^^^^^

error: aborting due to previous error

